; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/ergodone/keymaps/erovia/extr_keymap.c_default_layer_led_set.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/ergodone/keymaps/erovia/extr_keymap.c_default_layer_led_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @default_layer_led_set() #0 {
  %1 = call i32 (...) @eeconfig_read_default_layer()
  %2 = call i32 @biton32(i32 %1)
  switch i32 %2, label %7 [
    i32 129, label %3
    i32 128, label %5
  ]

3:                                                ; preds = %0
  %4 = call i32 (...) @ergodox_right_led_2_on()
  br label %7

5:                                                ; preds = %0
  %6 = call i32 (...) @ergodox_right_led_3_on()
  br label %7

7:                                                ; preds = %0, %5, %3
  ret void
}

declare dso_local i32 @biton32(i32) #1

declare dso_local i32 @eeconfig_read_default_layer(...) #1

declare dso_local i32 @ergodox_right_led_2_on(...) #1

declare dso_local i32 @ergodox_right_led_3_on(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
